--- a/src/components/styles/DinoShop.css
+++ b/src/components/styles/DinoShop.css
@@ -1,33 +1,18 @@
 .wrapper {
     margin-bottom: 150px;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 70px;
     margin-right: 50px;
     margin-left: 50px;
 }
-
-/* .seemorebutton {
-    text-decoration-line: underline;
-    border-color: white;
-    margin-left: 1250px;
-    margin-top: 20px;
-    font-size: large;
-} */
 
 .card-img-top {
     height: auto;
     width: auto;
 }
 
-/* .raptorimage {
-    display: inline-block;
-    height: auto;
-    max-width: 100%;
-} */
-
 .card {
     border-color: rgb(134, 132, 132);
-    /* border-radius: 25px; */
     height: 100%
 }
 
@@ -45,11 +30,15 @@
     border-color: darkgreen;
 }
 
-/* .shopbackgroundoverlay {
+.shopbackgroundoverlay {
     background-color: rgba(37, 37, 37, 0.705);
     width: 100%;
     height: 100%;
     margin: auto;
     border-radius: 25px;
     padding: 30px;
-} */
+}
+
+h3 {
+    color: white;
+}
